--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
 # API keys
 Config.swift
+Config.swift
+SupabaseConfig.swift
 
 # xcode files
 project.pbxproj
 ByteWaste_C4C.xcscheme
+
+*.xcuserdata/
+xcuserdata/
+*.xcworkspace/xcuserdata/
+
+*.pbxproj.user
+.DS_Store
